# DictWordCount

./: .gitmodules  CMakeLists.txt  Readme.md
includes/: dict_word_count.h
modules/: Appimage.cmake  Catch2.cmake  InstallSetup.cmake  OpenMP.cmake  UnitTest.cmake  sltbench.cmake
srcs/: dict_word_count.c  main.c
srcs/tests/: catch2.cpp
test_files/: dictionary1  dictionary2  dictionary3  dictionary4  dictionary5
